infra/k8s/api-authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-authentication-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-authentication
  template:
    metadata:
      labels:
        app: api-authentication
    spec:
      volumes:
        - name: api-authentication-configmap-volume
          configMap:
            name: api-authentication-configmap
      containers:
        - name: api-authentication
          image: radoslavirha/hikers-book-api-authentication
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /app/api/authentication/config
              name: api-authentication-configmap-volume
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-srv
spec:
  selector:
    app: api-authentication
  ports:
    - name: api-authentication
      protocol: TCP
      port: 4000
      targetPort: 4000
