infra/k8s/api-graphql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-graphql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-graphql
  template:
    metadata:
      labels:
        app: api-graphql
    spec:
      volumes:
        - name: api-graphql-configmap-volume
          configMap:
            name: api-graphql-configmap
      containers:
        - name: api-graphql
          image: radoslavirha/hikers-book-api-graphql:latest
          # imagePullPolicy: Never
          volumeMounts:
            - mountPath: /app/api/graphql/config
              name: api-graphql-configmap-volume
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-srv
spec:
  selector:
    app: api-graphql
  ports:
    - name: api-graphql
      protocol: TCP
      port: 4000
      targetPort: 4000
