infra/k8s/api-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-trips-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-trips
  template:
    metadata:
      labels:
        app: api-trips
    spec:
      volumes:
        - name: api-trips-configmap-volume
          configMap:
            name: api-trips-configmap
      containers:
        - name: api-trips
          image: radoslavirha/hikers-book-api-trips:latest
          # imagePullPolicy: Never
          volumeMounts:
            - mountPath: /app/api/trips/config
              name: api-trips-configmap-volume
---
apiVersion: v1
kind: Service
metadata:
  name: trips-srv
spec:
  selector:
    app: api-trips
  ports:
    - name: api-trips
      protocol: TCP
      port: 4000
      targetPort: 4000
