infra/k8s/mongodb-authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-authentication-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-authentication
  template:
    metadata:
      labels:
        app: mongodb-authentication
    spec:
      containers:
        - name: mongodb-authentication
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-authentication-srv
spec:
  type: ClusterIP
  selector:
    app: mongodb-authentication
  ports:
    - name: client
      protocol: TCP
      port: 27017
      targetPort: 27017
