infra/k8s/ui-hikers-book.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-hikers-book-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-hikers-book
  template:
    metadata:
      labels:
        app: ui-hikers-book
    spec:
      volumes:
        - name: ui-hikers-book-configmap-cs-volume
          configMap:
            name: ui-hikers-book-configmap
        - name: ui-hikers-book-configmap-en-us-volume
          configMap:
            name: ui-hikers-book-configmap
        - name: ui-hikers-book-configmap-sk-volume
          configMap:
            name: ui-hikers-book-configmap
      containers:
        - name: ui-hikers-book
          image: radoslavirha/hikers-book-ui-hikers-book:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /usr/share/nginx/html/cs/assets/config
              name: ui-hikers-book-configmap-cs-volume
            - mountPath: /usr/share/nginx/html/en-US/assets/config
              name: ui-hikers-book-configmap-en-us-volume
            - mountPath: /usr/share/nginx/html/sk/assets/config
              name: ui-hikers-book-configmap-sk-volume
---
apiVersion: v1
kind: Service
metadata:
  name: ui-hikers-book-srv
spec:
  selector:
    app: ui-hikers-book
  ports:
    - name: ui-hikers-book
      protocol: TCP
      port: 4000
      targetPort: 80
