infra/k8s/ingress-srv-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: hikers-book.dev.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-hikers-book-srv
                port:
                  number: 4000
